[gd_scene load_steps=5 format=3 uid="uid://cmmq3qk054d8m"]

[ext_resource type="Script" uid="uid://dcr3vuytcemx4" path="res://base/menu/main_menu/main_menu.gd" id="1_1jjd6"]
[ext_resource type="Theme" uid="uid://4r6b2cnujbph" path="res://assets/gui_assets/waste_no_space.theme" id="1_lue4o"]
[ext_resource type="Script" uid="uid://c176p1imvld44" path="res://base/menu/main_menu/option_menu.gd" id="2_byskk"]
[ext_resource type="Script" uid="uid://mhomivb5vuru" path="res://base/menu/main_menu/level_select.gd" id="3_luyhs"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lue4o")
script = ExtResource("1_1jjd6")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -135.5
offset_right = 49.5
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="NewGame" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="LevelSelect" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Level"

[node name="Options" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Option" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_byskk")

[node name="MarginContainer" type="MarginContainer" parent="Option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="Option/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Option/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="Master" type="HBoxContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Master"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Master"

[node name="MasterVolume" type="HSlider" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Master"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 20.0
step = 0.1

[node name="Music" type="HBoxContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Music"

[node name="MusicVolume" type="HSlider" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Music"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 20.0
step = 0.1

[node name="SFX" type="HBoxContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/SFX"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SFX"

[node name="SfxVolume" type="HSlider" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/SFX"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 20.0
step = 0.1

[node name="Mute" type="HBoxContainer" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Mute"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Mute"

[node name="Mute" type="CheckButton" parent="Option/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/Mute"]
unique_name_in_owner = true
layout_mode = 2

[node name="LevelSelect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_luyhs")

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="LevelSelect/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="LevelSelect/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect/MarginContainer/PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="LevelSelect/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Select Level"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LevelSelect/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LevelContainer" type="GridContainer" parent="LevelSelect/MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Back" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 70.0
offset_bottom = -9.0
grow_vertical = 0
size_flags_horizontal = 0
text = "back"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
text = "0.0.0"

[node name="ConfimNewGame" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
title = "New Game"
position = Vector2i(0, 36)
size = Vector2i(418, 100)
dialog_text = "Starting a new game will reset all game data."
